tests/NormalTests/paczka1/fuzzy1/95436997.err
Error in line 7: TMnhHan S253 18,8
Error in line 5: S533 A744 98,6
Error in line 10: weLUEUd S533 60,1
Error in line 28: LOeR2g S533 13,5
Error in line 34: S533 S533 71,9
